--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ master, github_action ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
   ci:
