--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
             backend: "c,cpp"
             env: { TEST_CODE_STYLE: 1 }
             extra_hash: "-codestyle"
+          - os: ubuntu-18.04
+            python-version: 3.7
+            backend: "c,cpp"
+            env: { COVERAGE: 1 }
           # Limited API
           - os: ubuntu-18.04
             python-version: 3.6
