--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,7 @@ jobs:
             python-version: 3.7
             backend: "c,cpp"
             env: { COVERAGE: 1 }
+            timeout-minutes: 180
           # Limited API
           - os: ubuntu-18.04
             python-version: 3.6
